<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#808080"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="#C0C0C0"
                android:scrollbars="vertical"
                android:text="@string/intro_1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="#C0C0C0"
                android:scrollbars="vertical"
                android:text="@string/intro_2"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="#C0C0C0"
                android:scrollbars="vertical"
                android:text="@string/intro_3"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="#C0C0C0"
                android:scrollbars="vertical"
                android:text="@string/intro_4"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#808080"
                android:id="@+id/introVideo"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:text="@string/watch_arabic_video_tutorial"/>

        </LinearLayout>

</ScrollView>